policies/network/dev-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-default-deny
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
